package pt.ipp.isep.dei.esoft.project.mappers;

public class MessageMapper {
}
